--- a/public/index.html
+++ b/public/index.html
@@ -24,6 +24,10 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
+    <script
+      src="https://kit.fontawesome.com/3bfd7c0eb0.js"
+      crossorigin="anonymous"
+    ></script>
     <title>Todo List</title>
   </head>
   <body>
